--- a/01-css-typeface/stylesheet/stylesheet.css
+++ b/01-css-typeface/stylesheet/stylesheet.css
@@ -1,16 +1,28 @@
+/* COLOR CODE 
+    ALICE BLUE (cool blue): rgb(240, 248, 255)
+    
+*/
+
+
 body { 
     height: 400vh;
     width: 850;
     margin: 0;
-    background-color :mediumblue;
+    background-color:aliceblue;
+    display: flex;
+    flex-direction: column;
 }
 .letter {
     margin:0;
 }
+
+/*  LANDING PAGE */
+
 #landing-page {
+    margin: 0;
     width: 92vw ;
     padding: 4em;
-    height: 84vh;
+    height: 80vh;
     display:flex;
 }
 #class-title {
@@ -68,7 +80,7 @@ body {
     font-variation-settings: 'wdth' 70;
     font-size: 3em;
     line-height: 0.9; 
-    color: white;
+    color: aliceblue;
 }
 .event-title { 
     width: 45%;
@@ -90,7 +102,7 @@ body {
     font-variation-settings: 'wdth' 70;
     text-align: center;
     line-height: 0.9; 
-    color: white;
+    color: aliceblue;
 }
 #school-container {
     width: 10em;
@@ -98,7 +110,7 @@ body {
     top: 308;
     margin: 1em auto;
     position: relative;
-    border: 5px solid white;
+    border: 5px solid aliceblue;
     border-radius: 40px;
 
     text-align: center;
@@ -115,10 +127,75 @@ body {
 }
 
 .information-page { 
+    display: block;
+    margin: 10 0;
     height: 300vh;
     width: 100vw;
     position: relative;
 }
+.event-info {
+    position:relative;
+    min-width: 92vw;
+    min-height: 38em;
+    padding: 3em;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.landing-page .guest-name {
+    width: auto; 
+}
+
+
+/*  INFORMATION PAGE */
+
+#one, #three {
+    background-color:aliceblue ;
+}
+#two, #four {
+    background-color:rgb(247, 126, 28) ;
+}
+
+#one .guest-name {
+    margin-left: 2em;
+}
+
+#one .information { 
+    
+    grid-column: 1/ span 3;
+}
+
+#introduction {
+    padding: 5em;
+    font-family: 'Archivo', sans-serif; 
+    font-weight: 400;
+    font-size: 20px;
+    font-variation-settings: 'wdth' 100;
+    line-height: 1.3;
+    text-shadow: 0 0 15px black;
+    color: transparent;
+}
+
+
+
+
+
+#one .first-name, .last-name {
+    width: 35em;
+}
+
+#one .first-name > .letter-i { 
+    width: 3.6em;
+}
+#one .first-name > .letter-d, .letter-n { 
+    width: 5.5em;
+}
+#one .last-name > .letter-s {
+    width: 5.2em;
+}
+#one .last-name > .letter-e {
+    width: 5.7em;
+}
+
 
 
 
