--- a/01-css-typeface/stylesheet/style-sheet.css
+++ b/01-css-typeface/stylesheet/style-sheet.css
@@ -5,18 +5,17 @@
 
 body {
     background-color: rgb(41, 63, 230);
-    overflow-y: scroll;
+    overflow-y: visible;
     margin:0;
 }
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@100,400;66.5,710&display=swap');
 
 .wrapper {
     background-color: rgb(41, 63, 230);
-    width: 100%; 
+    width: 100%;  
+    height: 430vh;
     margin: auto;
     position: relative;
-    display: flex;
-    flex-direction: column;
 }
 
 .landing-wrapper {
@@ -27,31 +26,45 @@ body {
     top: 0px;
     left: 0px;
     background-color: rgb(41, 63, 230); 
+    float:left;
 }
 
 .landing-area { 
-    position: absolute;
+    position: relative;
     top: 20px;
     left: 20px;
     width: calc(100% - 40px);
     height: calc(100% - 40px);
-    background-color: white;
+    background-color: rgb(41, 63, 230);
     /* border: 1px solid black;    */
-    display: inline-flex;
 }
 
 /* LANDING PAGE - TITLE */
 .title-wrapper {
+    top: 0; 
+    left: 0;
+    position: relative;
     background-color: rgb(41, 63, 230);
     width: 100%;
-    padding: 3em;
+    padding-top: 3em;
+    padding-left: 3em;
     float: left;
+}
+
+.landing-title-1, .landing-title-2 {
+    width: 60em; 
+
+}
+#class-title{
+    width: 100%;
+    float: left; 
+    transition: ease all .5s;
+   
 }
 
 .text-container {
     width: 180px;
-    /* background-color: white;
-    border: 1px solid black;   */
+
     vertical-align: top;
 }
 .text-container > p  {
@@ -67,22 +80,28 @@ body {
 }
 
 /* LANDING PAGE - EVENT */
+#intro-container { 
+    transition: ease all .5s;
+}
 
 .event-title {
-    width: 50%;
+    width: 20%;
+    right:0;
     height: 100%;
-    background-color:rgb(41, 63, 230);
+    /* background-color:red; */
     text-align: center;
-    float:right;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
 }
 #event-container {
-    margin: 0 auto;
+    width:10em;
+    margin-left: auto;
+    margin-right: auto;
     position: absolute;
+    /* background-color:rgb(235, 68, 235); */
     top: 380px;
+    left:50%;
+    transform: translate(-50%,0);
+    
 }
 #event-container > h2 {
     margin: 0;
@@ -98,11 +117,13 @@ body {
     margin: 0 auto;
     width: 10em;
     height: 4em;
-    bottom: 150px;
+    top: 520px;
     position: absolute;
     border: 3px solid white;
     border-radius: 50px;
     text-align: center;
+    left:50%;
+    transform: translate(-50%,0);
     
 
 }
@@ -124,8 +145,6 @@ body {
 .info-container { 
     width: 100%;
     height: 300vh;
-    grid-row-start: 2;
-    grid-row-end: 5;
     background-color:rgb(41, 63, 230);
     display: grid;
     grid-template-columns: repeat(5,1fr);
@@ -141,17 +160,25 @@ body {
 #day-2, #day-4 {
     background-color:white;
 }
+.date-pin {
+    width: 250px;
+    height:250px;
+    background-color:rgb(235, 68, 235);
+    border-radius: 50%;
+}
+
 
 /* EVENT - DAY 1 */
 #day-1 {
-    width: 90%;
+    width: 50em;
     height: 70%;
     grid-column: 3/ 6;
     grid-row-start: 1;
-    transform: rotate(5deg) translate(-12px,5em);;
+    transform: rotate(5deg) translate(-12px,5em);
     border-radius: 90px;
     border: 5px solid white;
     overflow-y: scroll;
+    transition: ease all .5s;
 
 }
 #guest-1 { 
@@ -161,6 +188,8 @@ body {
     width: 36em;
     margin: 0;
     transform: scale(0.9) rotate(-7deg) translate(-12px,0);
+    transition: ease all .5s;
+
 }
 
 #day-1  p {
@@ -172,19 +201,49 @@ body {
     color: aliceblue;
     line-height: 1.6;
 }
+#first {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    transform: translate(50px,320px);
+    z-index: 9;
+    text-align: center;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    transition: ease all .5s;
+}
+
+#first p {
+    padding: 1em;
+    position: absolute;
+    top: 50px;
+    left: 5px;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 36px;
+    font-weight: 400;
+    font-variation-settings: 'wdth' 150;
+    color: aliceblue;
+    line-height: 1;
+}
+.hide {
+    display: none;
+}
+.show:hover + .hide {
+    display: block;
+}
 
 /* EVENT - DAY 2 */
 
 #day-2 {
-    width: 100%;
+    width: 37em;
     height: 90%;
     grid-row-start: 2;
     grid-column: 1/3;
-    transform: rotate(-3deg) translate(3em,2em);;
+    transform: rotate(-3deg) translate(3em,2em);
     border-radius: 90px;
     background-color: transparent;
     border: 5px solid white;
     overflow-y: scroll;
+    transition: ease all .5s;
 }
 #guest-2 { 
     grid-column: 3/ 6;
@@ -192,6 +251,7 @@ body {
     width: 50em;
     margin: 0;
     transform: scale(0.9) rotate(8deg) translate(3em,-5em);
+    transition: ease all .5s;
 }
 #day-2 p {
     padding: 2.5em 2em;
@@ -201,6 +261,28 @@ body {
     font-variation-settings: 'wdth' 100;
     color: aliceblue;
     line-height: 1.6;
+}
+
+#second {
+    grid-column: 3/ 6;
+    grid-row-start: 2;
+    transform: translate(0px,15em);
+    z-index: 9;
+    text-align: center;
+    transition: ease all .5s;
+}
+
+#second p {
+    padding: 1em;
+    position: absolute;
+    top: 50px;
+    left: 5px;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 36px;
+    font-weight: 400;
+    font-variation-settings: 'wdth' 150;
+    color: aliceblue;
+    line-height: 1;
 }
 
 /* EVENT - DAY 3 */
@@ -216,25 +298,228 @@ body {
     height: 90%;
     grid-row-start: 3;
     grid-column: 3/ 6;
-    transform: rotate(2deg) translate(5em,0);;
+    transform: rotate(2deg) translate(7em,0);
     border-radius: 90px;
     border: 5px solid white;
     overflow-y: scroll;
+    transition: ease all .5s;
+
 }
 #guest-3 { 
     grid-column: 1/ 5;
     grid-row-start: 3;
     width: 60em;
     margin: 0;
-    transform: scale(0.9) rotate(-7deg) translate(-12px,0);
+    transform: scale(0.9) rotate(-4deg) translate(20px,0);
+    transition: ease all .5s;
+
+}
+#day-3 p {
+    padding: 2.5em 3em;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 20px;
+    font-weight: 350;
+    font-variation-settings: 'wdth' 100;
+    color: aliceblue;
+    line-height: 1.6;
+}
+#third {
+    grid-column: 3/5;
+    grid-row-start: 3;
+    transform: translate(-4em,1em);
+    z-index: 9;
+    text-align: center;
+    transition: ease all .5s;
+
+}
+#third p {
+    padding: 1em;
+    position: absolute;
+    top: 50px;
+    left: 5px;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 36px;
+    font-weight: 400;
+    font-variation-settings: 'wdth' 150;
+    color: aliceblue;
+    line-height: 1;
 
 }
 
 /* EVENT - DAY 4 */
 
 #day-4 {
+    width: 100%;
+    height: 50%;
     grid-row-start: 4;
+    grid-column: 1/3;
+    transform: rotate(-3deg) translate(3em,2em);;
+    border-radius: 90px;
+    background-color: transparent;
+    border: 5px solid white;
+    overflow-y: scroll;
+    transition: ease all .5s;
+
 }
+
+#day-4 p {
+    padding: 4em 3em;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 20px;
+    font-weight: 350;
+    font-variation-settings: 'wdth' 100;
+    color: aliceblue;
+    line-height: 1.6;
+}
+
+#guest-4 {
+    grid-column: 3/ 6;
+    grid-row-start: 4;
+    width: 50em;
+    margin: 0;
+    transform: scale(0.9) rotate(1deg) translate(3em,-2em);
+
+    transition: ease all .5s;
+
+}
+#guest-4 .letter-c {
+    width: 5em;
+}
+#guest-4 .letter-m {
+    width: 9em;
+}
+
+#fourth { 
+    grid-column: 3/5;
+    grid-row-start: 4;
+    transform: translate(10em,1em);
+    z-index: 9;
+    text-align: center;
+    transition: ease all .5s;
+
+
+}
+
+#fourth p {
+    padding: 1em;
+    position: absolute;
+    top: 50px;
+    left: 5px;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 36px;
+    font-weight: 400;
+    font-variation-settings: 'wdth' 150;
+    color: aliceblue;
+    line-height: 1;
+}
+
+.clearFloat {
+    clear: both;
+}
+
+div ::-webkit-scrollbar {
+    display: none;
+}
+/* FOOTER */
+.footer {
+    clear: left;
+    position: absolute;
+    bottom: 0px;
+    display: block;
+    width: 100%;
+    height: 3em;
+    background-color:rgb(249, 206, 34);
+}
+
+.rolling-footer {
+    padding: 0;
+    font-family: 'Archivo', sans-serif; 
+    font-size: 2em;
+    font-weight: 350;
+    font-variation-settings: 'wdth' 100;
+    color: rgb(41, 63, 230);
+    line-height: 1.6; 
+}
+
+/* RESPONSIVE */
+
+@media only screen and (max-width: 1200px) {
+    .title-wrapper{
+        margin:0;
+    }
+    #class-title {
+        transform: scale(0.9);
+        transform-origin: top left;
+    }
+    #intro-container {
+        transform: scale(0.9);
+        transform-origin: center;
+    }
+    #day-1{
+        width: 40em;
+        transform: rotate(5deg) translate(-2em,-2em);  
+    }
+    #guest-1 {
+        padding-top:3em;
+        transform: scale(0.75) rotate(-7deg) translate(-12px,-2em);
+        transform-origin: top left;
+    }
+    #first {
+        transform : translate(30px,220px);
+    }
+
+    #day-2 {
+        width: 28em;
+        transform: rotate(-3deg) translate(-1em,2em)
+    }
+    #guest-2 {
+        transform: scale(0.75) rotate(8deg) translate(-1em,-5em);
+        transform-origin: top left;
+    }
+    #second {
+        transform : translate(-6em,13em);
+
+    }
+    #day-3 {
+        width: 30em;
+        transform: rotate(2deg) translate(3em,0);
+        transform-origin: top left;
+    }
+    #guest-3 {
+        transform: scale(0.75) rotate(-4deg) translate(-6em,-6em);
+    }
+    #third {
+        transform : translate(-8em,0);
+    }
+
+    #day-4{
+        transform: rotate(-3deg) translate(3em,2em);;
+
+    }
+    #guest-4{
+        transform: scale(0.75) rotate(1deg) translate(3em,-2em);
+        transform-origin: top left;
+
+    }
+    #fourth{
+        transform: translate(2em,-1em);
+
+    }
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .title-wrapper{
+        margin:0;
+    }
+    #class-title {
+        transform: scale(0.7);
+        transform-origin: top left;
+    }
+    #intro-container {
+        transform: scale(0.7);
+        transform-origin: center;
+    }
+  }
 
 
 /* KERNING */
