--- a/01-css-typeface/stylesheet/style-sheet.css
+++ b/01-css-typeface/stylesheet/style-sheet.css
@@ -164,8 +164,9 @@ div{
     background-color:rgb(41, 63, 230);
 }
 
-#day-2, #day-4 {
-    background-color:white;
+#day-2, #day-4, #day-1, #day-3 {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 .date-pin {
     width: 250px;
