--- a/02-kubrick/stylesheet/stylesheet-2.css
+++ b/02-kubrick/stylesheet/stylesheet-2.css
@@ -1,30 +1,171 @@
+* {
+    margin:0;
+    padding:0;
+    
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital@0;1&family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital@0;1&display=swap');
+
+
 .wrapper {
     position: relative;
-    width: 95vw;
-    height: 95vh;
-    margin: 2.5vh 2.5vw;
+    width: 100vw;
+    height: 100vh;
     padding: 0;
-    background-color:antiquewhite;
+    background-color: #f3f3f3;
 
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
 }
 
 section {
+    margin:0 0 30 0;
     width: 100%;
     height: 100%;
     position: relative;
     overflow-y: scroll;
+    padding: 3em 3.5em;
 }
 
+/* INDEX */
 .left-index {
+    position: relative;
     background: linear-gradient(180deg, #F8F4EF 0%, rgba(223, 116, 39, 0.45) 100%);
+    flex-direction: column;
 }
 
+.title {
+    position:relative;
+    top: 0em;
+    min-height: 5em;
+    min-width: 5em;
+    display:block;
+    /* background-color: aqua; */
+}
+.title h1 {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 3.5em;
+    padding: 0.5em 0;
+    letter-spacing: -1;
+    word-spacing: -10;
+    font-weight: 600;
+
+}
+
+.tag-content {
+    margin: 2em 0;
+}
+
+.navigation-tags {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* padding: 13px; */
+    flex-wrap: wrap;
+
+}
+
+.tag-button {
+    width: auto;
+    height: auto;
+    background: transparent; /* Green */
+    color: black;
+    padding: 12 18;
+    border: 1.9px solid #000000;
+    border-radius: 18px;
+    box-shadow: 0 5px 13px 0 rgba(0,0,0,0.2), 0 5px 16px 0 rgba(0,0,0,0.19);    
+
+    font-family: 'IBM Plex Mono', monospace;    
+    font-size: 1.1em;
+    letter-spacing: -0.5;
+    word-spacing: -0.75 ;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 5px 4px;
+}
+
+.tag-button:hover {
+    background-color: black; /* Green */
+    color: white;
+}
+
+.extra-bt {
+    border: 1.7px dashed #000000;
+
+}
+
+p {
+    font-family: 'IBM Plex Sans', sans-serif;    
+    font-size: 1em;
+    line-height: 1.5;
+    margin-top: 2em;
+}
+
+/* SUBTAG CONTENT */
+.tag-content ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+.subtag {
+    width: 100%;
+    position: relative;    
+    padding: 0.8em 1.5em; 
+    margin-top: 0.5em;
+    border: 2px solid black;
+    font-family: 'IBM Plex Mono', monospace;    
+    font-size: 1.2em;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 21px;
+    
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+
+}
+
+.subtag:hover {
+    background-color: black; /* Green */
+    color: white;
+}
+
+
+/* CONTENT */
 .right-content {
-    /* display: none; */
-    background-color:peachpuff;
+    position: relative;
+    background-color: #f3f3f3;
 }
 
+.right-content h3{ 
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 2.2em;
+    line-height: 1.1;
+    padding-top: 1.4em;
+    letter-spacing: -1;
+    word-spacing: -5;
+    font-weight: 600;
+    
+}
+
+right-content p {
+    font-family: 'IBM Plex Sans', sans-serif;    
+    font-size: 1em;
+    line-height: 1.5;
+    margin-top: 2em;
+}
+
+#fiy-text {
+    font-family: 'IBM Plex Sans', sans-serif;    
+    font-size: 1em;
+    font-style: italic;
+    line-height: 1.5;
+    padding: 0.5em 1.5em;
+}
+br { 
+    line-height: 150%;
+}
