--- a/02-kubrick/stylesheet/stylesheet-3.css
+++ b/02-kubrick/stylesheet/stylesheet-3.css
@@ -10,7 +10,7 @@
 .wrapper {
     position: relative;
     width: 100vw;
-    height: 300vh;
+    height: 270vh;
     padding: 0;
     background-color: #f3f3f3;
 
@@ -31,9 +31,14 @@ section {
 /* INDEX */
 .left-index {
     position: relative;
-    background: linear-gradient(180deg, #F8F4EF 0%, rgba(223, 116, 39, 0.45) 100%);
-    flex-direction: column;
+    background: linear-gradient(180deg, rgba(36, 54, 120, 0) 0%, rgba(36, 54, 120, 0.8) 100%);    flex-direction: column;
     overflow-x: hidden ;
+}
+
+.back-button {    
+    margin-top : 0;
+    margin-bottom: 1em;
+    height: 3.5em;
 }
 
 .title {
@@ -52,11 +57,6 @@ section {
     word-spacing: -10;
     font-weight: 600;
 
-}
-.back-button {    
-    margin-top : 0;
-    margin-bottom: 1em;
-    height: 3.5em;
 }
 
 .tag-content {
@@ -143,12 +143,11 @@ p {
 .right-content {
     position: relative;
     background-color: #f3f3f3;
-    resize:horizontal;
 }
 
 .right-content h3{ 
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 2.2em;
+    font-size: 1.5em;
     line-height: 1.1;
     padding-top: 1.4em;
     letter-spacing: -1;
@@ -173,4 +172,23 @@ right-content p {
 }
 br { 
     line-height: 150%;
+}
+
+
+.hashtag { 
+    width: auto;
+    position: relative;    
+    padding: 0.4em 1em; 
+    margin:1em 0.5em 0.5em 0em ;
+    border: 2px solid black;
+    border-radius: 15px;
+
+    font-family: 'IBM Plex Mono', monospace;    
+    font-size: 1em;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 21px;
+    white-space: nowrap;
+
+    overflow-x: hidden;
 }
