--- a/02-kubrick/stylesheet/stylesheet-2.css
+++ b/02-kubrick/stylesheet/stylesheet-2.css
@@ -4,7 +4,7 @@
     
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital@0;1&family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital@0;1&family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 
 
 .wrapper {
@@ -161,6 +161,14 @@ right-content p {
     font-family: 'IBM Plex Sans', sans-serif;    
     font-size: 1em;
     line-height: 1.5;
+    margin-top: 2em;
+}
+
+right-content .sub-heading {
+    font-family: 'IBM Plex Sans', sans-serif;    
+    font-size: 1.2em;
+    line-height: 1.5;
+    font-weight: 600;
     margin-top: 2em;
 }
 
