--- a/02-kubrick/stylesheet/style-sheet.css
+++ b/02-kubrick/stylesheet/style-sheet.css
@@ -19,7 +19,16 @@ body {
     border-radius: 2.5em;
     box-shadow: 0 5px 13px 0 rgba(0,0,0,0.2), 0 5px 16px 0 rgba(0,0,0,0.19);    
 
-    
+}
+.bg-container {
+    position:absolute;
+    width: 100%; 
+    height: 100%; 
+    z-index: -30;
+}
+
+.kubrick-face {
+    display: none;
 }
 
 h1 { 
@@ -29,6 +38,7 @@ h1 {
     font-size: 3.5em;
     padding: 0.5em 0;
     text-align:center;
+    letter-spacing: -1.5;
 }
 
 .description { 
