--- a/02-kubrick/stylesheet/stylesheet-2.css
+++ b/02-kubrick/stylesheet/stylesheet-2.css
@@ -8,11 +8,11 @@
 
 
 .wrapper {
-    position: relative;
     width: 100vw;
     height: 300vh;
     padding: 0;
     background-color: #f3f3f3;
+
 
     display: flex;
     flex-direction: row;
@@ -34,6 +34,13 @@ section {
     background: linear-gradient(180deg, #F8F4EF 0%, rgba(223, 116, 39, 0.45) 100%);
     flex-direction: column;
     overflow-x: hidden ;
+    transition: 0.1s;
+    min-width: 250;
+}
+
+.left-container {
+    margin: 0 auto;
+    max-width: 700;
 }
 
 .title {
@@ -61,20 +68,22 @@ section {
 
 .tag-content {
     margin: 2em 0;
+    display: none;
 }
 
 .navigation-tags {
     width: 100%;
+
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* padding: 13px; */
     flex-wrap: wrap;
 
 }
 
 .tag-button {
-    width: auto;
+    max-width: 100%;
+    min-width: auto;
     height: auto;
     background: transparent; /* Green */
     color: black;
@@ -89,6 +98,8 @@ section {
     word-spacing: -0.75 ;
 
     margin: 5px 4px;
+
+    flex-grow: 1;
 }
 
 .tag-button:hover {
@@ -141,9 +152,13 @@ p {
 
 /* CONTENT */
 .right-content {
+    display: none;
     position: relative;
     background-color: #f3f3f3;
     resize:horizontal;
+    transition: 0.1s;
+
+
 }
 
 .right-content h3{ 
@@ -154,7 +169,23 @@ p {
     letter-spacing: -1;
     word-spacing: -5;
     font-weight: 600;
-    
+}
+
+.wisdom {
+    margin: 0 1.5em;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 1.5em;
+    line-height: 1.3;
+    text-align:left;
+    letter-spacing: -1;
+    word-spacing: -5;
+    color:rgb(209, 100, 49);
+}
+
+.article-text { 
+    margin: 0 auto;
+    max-width: 700;
+    display:none;
 }
 
 right-content p {
@@ -182,3 +213,17 @@ right-content .sub-heading {
 br { 
     line-height: 150%;
 }
+
+#handle {
+    display: none;
+    width: 25px;
+    height: 25px;
+    position: fixed;
+    left: calc(50vw - 12.5px);
+    top: calc(50vh - 12.5px);
+    border-width: 1.5px;
+    border-style: solid;
+    background-color:rgba(223, 116, 39, 0.45);
+    cursor: grab;
+}
+
