--- a/02-kubrick/stylesheet/style-sheet.css
+++ b/02-kubrick/stylesheet/style-sheet.css
@@ -1,35 +1,45 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgba(36, 54, 120, 0) 0%, rgba(36, 54, 120, 0.8) 100%);    flex-direction: column;
-    height: 100%;
+    /* background-image: url("../media/bg-gradient/1.png"); */
+    /* background-repeat:no-repeat;
+    background-position:left top;
+    background-size:100% 100%; */
+    /* background: linear-gradient(180deg, rgba(36, 54, 120, 0) 0%, rgba(36, 54, 120, 0.8) 100%);    flex-direction: column; */
+    height: 100vh;
 
 
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital@0;1&family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:ital@0;1&display=swap');
 
+.content-container {
+    position: absolute;
+    top:0;
+    width: 100%;
+    height: 100%;
+
+}
+
 .wrapper {
     position: relative;
     top: 25%;
-    margin: auto;
+    margin: 0 auto;
     max-width: 40em;
     max-height: 35em;
     padding: 2em;
-    background-color: white;
     border-radius: 2.5em;
+
+    background-color:blanchedalmond; 
     box-shadow: 0 5px 13px 0 rgba(0,0,0,0.2), 0 5px 16px 0 rgba(0,0,0,0.19);    
 
 }
-.bg-container {
-    position:absolute;
-    width: 100%; 
-    height: 100%; 
-    z-index: -30;
+.bg-container{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    z-index: -5;
 }
 
-.kubrick-face {
-    display: none;
-}
 
 h1 { 
     margin: 0;
@@ -47,8 +57,9 @@ h1 {
     font-size: 0.95em;
     line-height: 2.3;
     text-align:center;
-
 }
+
+
 
 .door { 
     width: auto;
