--- a/02-kubrick/stylesheet/stylesheet-2.css
+++ b/02-kubrick/stylesheet/stylesheet-2.css
@@ -34,7 +34,11 @@ section {
 /* INDEX */
 .left-index {
     position: relative;
-    background: linear-gradient(180deg, #F8F4EF 0%, rgba(223, 116, 39, 0.45) 100%);
+    background-image: url("../media/bg-gradient/4.png");
+    background-repeat:no-repeat;
+    background-position:left top;
+    background-size:100% 100%;
+    /* background: linear-gradient(180deg, #F8F4EF 0%, rgba(223, 116, 39, 0.45) 100%); */
     flex-direction: column;
     transition: 0.1s;
     min-width: 250;
